RESULTS/AutoSpec/raw_results/out-4o-sv-comp/0016_0007/0016_merged.txt
/home/yangfp/AutoSpec/AutoSpec1/out/0016_0007/0016_merged.c:37:3: error: unterminated comment
   37 |   /*@;
      |   ^
